updated README.md updated Makefile

--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -15,8 +15,8 @@ include $(DEVKITARM)/ds_rules
 # all directories are relative to this makefile
 #---------------------------------------------------------------------------------
 BUILD		:=	build
-SOURCES		:=	source
-INCLUDES	:=	include
+SOURCES		:=	source source/polarssl source/twltool source/gm9i
+INCLUDES	:=	include source
 DATA		:=
 
 
